# tabr-py

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  pyproject.toml
lib/: __init__.py  data.py  deep.py  env.py  metrics.py  util.py
notebooks/: results.ipynb
tabr/: __init__.py  dataset.py  lib.py  optimizer_.py  schemes.py  tabr.py  utils.py
tests/: test_tabr.py
